# matplotlib-backend-sixel

./: .gitignore  .pre-commit-config.yaml  README.md  matplotlib-backend-sixel.py  pyproject.toml
.github/workflows/: python-app.yml
matplotlib-backend-sixel/: __init__.py
tests/: versions.py
tests/unit/: test_example.py
